--- a/ddcutil-sys/Cargo.toml
+++ b/ddcutil-sys/Cargo.toml
@@ -2,7 +2,7 @@
 edition = "2021"
 name = "ddcutil-sys"
 version = "0.0.3"
-authors = ["arcnmx"]
+authors = ["arcnmx", "Quang Ngô <ngoquang2708@gmail.com>"]
 
 description = "libddcutil FFI bindings"
 keywords = ["ddcci", "ddc", "ci", "ddcutil", "vcp"]
