--- a/ddcutil/Cargo.toml
+++ b/ddcutil/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 edition = "2021"
 name = "ddcutil"
-version = "0.0.3"
-authors = ["arcnmx"]
+version = "0.0.4"
+authors = ["arcnmx", "Quang Ngô <ngoquang2708@gmail.com>"]
 
 description = "DDC/CI monitor access via libddcutil"
 keywords = ["ddcci", "ddc", "ci", "ddcutil", "vcp"]
