--- a/ddcutil-sys/Cargo.toml
+++ b/ddcutil-sys/Cargo.toml
@@ -19,5 +19,8 @@ maintenance = { status = "passively-maintained" }
 [dependencies]
 
 [build-dependencies]
-bindgen = "0.63"
-pkg-config = "0.3"
+bindgen = "0.69.4"
+system-deps = "7.0.1"
+
+[package.metadata.system-deps]
+ddcutil = "1.3.0"
